# WOSAI-ComfyUI

./: .gitignore  LICENSE  Project_Notes.md  README.md  __init__.py  extension.json  pyproject.toml  requirements.txt
docs/: comfyui-node-hiding-best-practices.md
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
nodes/: __init__.py  canvas_note.py  omni_slider.py  size_select.py
presets/: color_presets.json
web/: canvas-note.js  color-bar.js  node-color.js  omni-slider.js  size-select.js
web/css/: os-color.css  os-size.css  os-slider-hide.css  os-slider-panel.css  os-slider.css  wosai-theme.css  wosai-variables.css
web/lib/: color-core.js  color-store.js  color-theme.js  glass-theme.js  nodes2-hide.js  note-renderer.js  omni-hide.js  shared-utils.js  tooltip.js
workflows/: WOSAI-ComfyUI_example.json
wosai_core/: __init__.py  color_presets.py  config.py  registry.py
