[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WOSAI-ComfyUI"
version = "1.1"
description = "WOSAI-ComfyUI：专业的可视化节点美化与增强工具"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "穿山阅海", email = "xujianjian2004@126.com" }
]
keywords = [
  "comfyui", "custom-node", "canvas", "annotation", "resolution",
  "image-size", "node-color", "theme", "stable-diffusion", "flux", "workflow"
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.urls]
Homepage      = "https://github.com/xujianjian2004/WOSAI-ComfyUI"
Repository    = "https://github.com/xujianjian2004/WOSAI-ComfyUI"
Issues        = "https://github.com/xujianjian2004/WOSAI-ComfyUI/issues"

[tool.comfy]
PublisherId = "穿山阅海"
DisplayName = "WOSAI-ComfyUI"

[tool.setuptools.packages.find]
where   = ["."]
include = ["nodes*", "wosai_core*"]
exclude = ["*__pycache__*"]

[tool.setuptools.package-data]
"*" = ["web/**/*", "data/**/*"]
